# arc-cli

./: .env.example  .gitignore  BATCH_PROCESSING_PR.md  CLAUDE.md  DIFF_COMMAND_CHANGES.md  DIFF_COMMAND_REDESIGN_PLAN.md  FILE_LOCK_REMOVAL_PLAN.md  Makefile  PROPOSED_FIXES.md  PR_FIXES_SUMMARY.md  README.md  github_issues.md  github_issues_timescaledb.md  pyproject.toml  test_trail_integration.py
.github/workflows/: tests.yml
arc/: __init__.py  cli.py  cli_main.py  cli_validate.py
arc/analysis/: __init__.py  advanced_analyzer.py  assumption_detector.py  clustering.py  funnel_analyzer.py
arc/api/: __init__.py  models.py
arc/api/middleware/: __init__.py  auth.py
arc/api/utils/: __init__.py  validators.py
arc/cli/: ENTERPRISE_CLI_DESIGN_PHILOSOPHY.md  IMPLEMENTATION_PLAN.md  TODO.md  __init__.py  __main__.py  design_standards.py  enterprise_messaging.py  loading_interface.py  message_templates.py
arc/cli/commands/: __init__.py  analyze.py  diff.py  recommend.py  run.py  status.py  validate.py
arc/cli/utils/: __init__.py  console.py  db_connection.py  error_helpers.py  file_utils.py  hybrid_state.py  json_utils.py  modal_auth.py  state.py
arc/cli/visualizations/: __init__.py  reliability_display.py
arc/config/: __init__.py  development.py  production.py  testing.py
arc/core/: __init__.py
arc/core/models/: __init__.py  config.py  evaluation.py  result.py  scenario.py
arc/core/utils/: __init__.py  constants.py  helpers.py  openai_client.py
arc/database/: __init__.py  api.py  batch_processor.py  client.py  deploy_schema.py  utils.py
arc/database/schema/: indexes.sql  tables.sql
arc/database/schema/migrations/: __init__.py
arc/database/seed/failure_patterns/: README.md
arc/database/seed/failure_patterns/auth/: permission_boundary_violation.json  token_expiry_race.json
arc/database/seed/failure_patterns/calculation/: overflow_error.json
arc/database/seed/failure_patterns/data/: empty_results.json  encoding_mismatch.json  incomplete_data_extraction.json  parsing_type_confusion.json  schema_mismatch.json
arc/database/seed/failure_patterns/infrastructure/: network_partition.json  rate_limiting.json  resource_exhaustion.json  service_outage.json
arc/database/seed/failure_patterns/logic/: circular_dependency.json  race_condition.json  (+1 more)
arc/examples/: sandbox_db_integration.py
arc/ingestion/: __init__.py  normalizer.py  parser.py
arc/modal/: __init__.py  public_api.py
arc/recommendations/: __init__.py  data_extractor.py  diff_engine.py  engine.py  failure_analyzer.py  generic_analyzer.py  llm_client.py
arc/sandbox/engine/: __init__.py  simulator.py  tool_behavior_engine.py  trajectory_capture.py
arc/sandbox/evaluation/: __init__.py  evaluator.py  f1.py  failure_attributor.py  judge.py  precision.py  recall.py  reliability_scorer.py  reporter.py
arc/sandbox/scenarios/: __init__.py  generator.py  quality_scorer.py
arc/scenarios/: __init__.py  assumption_extractor.py  deduplicator.py  generation_coordinator.py  generator.py  pattern_adapter.py  pattern_library.py  pattern_selector.py  quality_scorer.py  quality_validator.py  scenario_instantiator.py  trail_adapter.py  trail_loader.py
arc/scenarios/failure_patterns/: __init__.py  library.py
arc/scenarios/validator/: __init__.py  validator.py
arc/scripts/: __init__.py
arc/simulation/: modal_orchestrator.py  tool_behavior_profiles.json
arc/tests/: __init__.py
arc/tests/e2e/: __init__.py  database_inspection.py  test_complete_pipeline.py
arc/tests/integration/: __init__.py  test_database.py
arc/tests/unit/: __init__.py  test_analysis_improvements.py  test_database_api.py  test_database_client.py  test_ingestion.py  test_loading_interface.py
configs/: README.md  audit_agent.yaml  finance_agent_v1.yaml  finance_agent_v2.yaml
docs/: ARC_OPEN_SOURCE_STRATEGY_V2.md  MODAL_AUTHENTICATION.md  OSS_LAUNCH_SCOPE.md  TESTING_GUIDE.md
docs/db/: DATABASE.md  SANDBOX_INTEGRATION_GUIDE.md  TIMESCALEDB_ARCHITECTURE.md  TRAJECTORY_REQUIREMENTS.md
docs/design/: ARC_CLI_SPRINT_CONTEXT.md  INTEGRATION_GUIDE.md  PRD.md  RL_INTEGRATION_PLAN.md  github_issues.md
docs/design/v1_scope/: ARC_EVAL_PRODUCTION_PLAN.md  V1_CONTINUOUS_IMPROVEMENT_STRATEGY.md  V1_JUDGE_EVALUATION_STRATEGY.md  V1_PROACTIVE_CAPABILITY_ASSURANCE.md  V1_SCENARIO_GENERATION_STRATEGY.md  V1_SIMULATION_STRATEGY.md
examples/configs/: README.md  audit_agent.yaml  finance_agent_v1.yaml  finance_agent_v2.yaml  minimal_agent.yaml
(+16 files in other folders)
